--- a/views/partials/HEADER.ejs
+++ b/views/partials/HEADER.ejs
@@ -25,7 +25,7 @@
 
     <!-- Our Custom CSS -->
     <link href="CSS/GoogleTextInput.css" rel="stylesheet">
-    <link href="CSS/home.css" rel="stylesheet">
+    <link href="CSS/card.css" rel="stylesheet">
     <link href="/CSS/postpage_style.css" rel="stylesheet">
 
     <!-- Bootstrap Modal -->
@@ -60,6 +60,6 @@
               <!-- <a class="dropdown-item" href="/"><%= myProfileName %> </a> -->
               <a class="dropdown-item" href="/logout">Logout</a>
             </div>
-          </div>
+        </div>
     </div>
 <!-- ---------------------------------------------HEADER------------------------------------------- -->
