fixed a simple bug

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/Header.ejs') %>
+<%- include('partials/HEADER.ejs') %>
 
 <!-- --------------------------------------------------Modal---------------------------------------------- -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
