--- a/views/partials/HEADER.ejs
+++ b/views/partials/HEADER.ejs
@@ -48,7 +48,7 @@
         </div>
         <% } %> 
 
-        <img onclick="location.href='/'" src="/xStatus-logo.png" alt="xStatus Logo"   class="BrandLogo">
+        <img onclick="location.href='/'" src="xStatusLogoSmall.png" alt="xStatus Logo"   class="BrandLogo">
 
         
 
